--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+dotenv = "0.15.0"
 egestorapi_test = {path = "../egestor_api"}
 iced = {version = "0.13", features = ["tokio"]}
 reqwest = { version = "0.12", features = ["json"] }
